--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "azishapidin/indoregion": "^3.0",
         "barryvdh/laravel-snappy": "^0.4.8",
         "cviebrock/eloquent-sluggable": "^8.0",
+        "doctrine/dbal": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
