--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3"
+        "laravel/ui": "^3.3",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.22"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
